# agent_tiers

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
src/agent_tiers/application/agent_service/: orchestrator.py
src/agent_tiers/application/use_cases/: chat.py  stream_chat.py  upload_documents.py
src/agent_tiers/domain/agent/: model.py
src/agent_tiers/domain/ports/: repositories.py  services.py
src/agent_tiers/infrastructure/: config.py
src/agent_tiers/infrastructure/adapters/: agent_service.py  ingestion_service.py  repositories_asyncpg.py  retrieval_service.py
src/agent_tiers/infrastructure/api/: main.py  schemas.py
src/agent_tiers/infrastructure/cache/: agent_cache.py
src/agent_tiers/infrastructure/db/: memory_db.py  rag_db.py
src/agent_tiers/infrastructure/ingestion/: chunker.py  extract.py  ingest.py
src/agent_tiers/infrastructure/llm_providers/: providers.py
src/agent_tiers/infrastructure/mcp/: mcp_client.py  mcp_config.json  memory_mcp.py  rag_mcp.py
src/agent_tiers/infrastructure/ui/: app.py  chainlit_app.py
